--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -7,7 +7,6 @@
     align-items: center;
     justify-content: center;
     background: $primary;
-    padding:0 20rem;
     .about-me-description{
         height: 100%;
         width: 100%;
@@ -20,7 +19,7 @@
             text-align: center;
             margin-bottom: 1.5rem;
             span{
-                color: $text;
+                @include text;
             }
         }
     }
