--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,12 +1,12 @@
 /* ===== Footer ===== */
 footer{
     height: 25vh;
-    background: black;
-    padding:3rem 20rem;
     display: flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 -3px 8px rgba(0, 0, 0, 0.250);
+    margin-top:1rem;
     .copyright-container{
         width: 100%;
         height:100%;
@@ -15,11 +15,10 @@ footer{
         align-content: center;
         flex-direction: column;
         span{
-            color:$text;
+            @include text;
             display: flex;
             justify-content: center;
             align-items: center;
-            filter: brightness(80%);
         }
     }
     .socials{
@@ -39,23 +38,17 @@ footer{
             z-index: 10;
             i{
                 font-size:3rem;
-                color: $text;
-                filter: brightness(75%);
+                @include text;
                 transition: 0.2s ease-in;
             }
             span{
-                color:$text;
-                filter: brightness(75%);
+                @include text;
                 transition: 0.2s ease-in;
             }
             &:hover{
-                i{
-                    text-shadow: 0 0 8px rgba(255, 255, 255, 0.650);
-                    filter: brightness(120%);
-                    transition: 0.2s ease-in;
-                }
+                i, 
                 span{
-                    filter: brightness(120%);
+                    color: $tertiary;
                     transition: 0.2s ease-in;
                 }
             }
