--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -3,8 +3,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    padding:0 20rem;
-    margin:1.5rem 0;
+    margin:1rem 0;
     height: 70vh;
     background: $primary;
     z-index: 5;
@@ -16,16 +15,15 @@
         flex-direction: column;
         justify-content: center;
         .project-title{
-            height: 15vh;
             display: flex;
             align-items: center;
-            margin-bottom:1.5rem;
+            margin-bottom:1rem;
             color:$secondary;
         }
         .project-about{
             height: auto;
             display: flex;
-            color:$text;
+            @include text;
             margin-bottom:2rem;
             font-size:14px;
             width: 85%;
@@ -233,7 +231,7 @@
     .project-box{
         height:90vh;
         padding:0 1rem;
-        margin:1.5rem 0;
+        margin:1rem 0;
         flex-direction: column;
         text-align: center;
         .project-description{
@@ -306,7 +304,7 @@
 @media (max-width: 900px){
     .project-box{
         padding:0 3rem;
-        margin:1.5rem 0;
+        margin:1rem 0;
         height:90vh;
 
         .project-description{
