--- a/styles/_designs.scss
+++ b/styles/_designs.scss
@@ -89,10 +89,19 @@
         padding:0 3rem;
         .swiper-container{
             .swiper-slide{
-                width: 40%;
+                width: 80%;
                 height: 100%;
                 -webkit-box-reflect: below 1px linear-gradient(transparent, transparent, #0006);
             }
+        }
+    }
+
+    .modal-img{
+        .full-img{
+            height: 60%;
+        }
+        .caption{
+            color:$primary;
         }
     }
 }
